--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family:  "微軟正黑體" , "Microsoft Jhenghei", sans-serif;
+}
+
 .legend{
     margin-bottom:76px;
     display:inline-block;
@@ -98,6 +102,7 @@
     padding: 20px;
     font-size: 5em;
     background-color: #fff;
+    cursor: pointer;
 }
 
 .thumbnail>.caption>h3 {
@@ -105,11 +110,28 @@
 }
 
 .landingpage {
-    padding-top: 80px;
-    height: 500px;
     background-image: url('../img/landingpage.jpg');
     background-position: 50% 50%;
     background-size: 100%;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.landingpage .title {
+    border: 5px solid;
+    border-radius: 10px;
+    font-size: 36px;
+    font-weight: 700;
+    padding: 5px;
+    margin: 5px;
+}
+
+
+@media screen and (min-width: 768px){
+    .landingpage {
+        padding-top: 80px;
+        height: 500px;
+    }
 }
 
 #bubbleDetailSection {
