--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -111,16 +111,21 @@ body {
 
 .landingpage {
     background-image: url('../img/landingpage.jpg');
-    background-position: 50% 50%;
+    background-position: 0% 0%;
     background-size: 100%;
     background-repeat: no-repeat;
     color: white;
+    margin-top: -19px;
+    /*position: fixed;*/
+    top: 0px;
+    width: 100%;
+    height: 100vh;
 }
 
 .landingpage .title {
     font-size: 54px;
     font-weight: 900;
-    margin: 5px;
+    margin: 5px;    
 }
 
 .arrow_box {
@@ -177,7 +182,7 @@ body {
 @media screen and (min-width: 768px){
     .landingpage {
         padding-top: 80px;
-        height: 500px;
+        /*height: 500px;*/
     }
 }
 
