調整線圖呈現特定線的方式、查詢按鈕會出現等待的效果

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -70,3 +70,19 @@
 .dataTables_filter {
     float: right;
 }
+
+#submit span{
+    display: block;
+}
+
+#submit i{
+    display: none;
+}
+
+#submit.waiting span{
+    display: none;
+}
+
+#submit.waiting i{
+    display: block;
+}
