新增使用資料庫的API、修改排行榜呼叫的API，測試資料庫速度

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -118,14 +118,61 @@ body {
 }
 
 .landingpage .title {
-    border: 5px solid;
-    border-radius: 10px;
-    font-size: 36px;
-    font-weight: 700;
-    padding: 5px;
+    font-size: 54px;
+    font-weight: 900;
     margin: 5px;
 }
 
+.arrow_box {
+    padding: 5px;
+    position: relative;
+    background: rgba(255, 255, 255, 0);
+    border: 4px solid #ffffff;
+    border-radius: 10px;
+    white-space: nowrap;
+    float: right;
+    -webkit-animation: cssAnimation 1s infinite linear alternate;
+    -moz-animation: cssAnimation 1s infinite linear alternate;
+    -o-animation: cssAnimation 1s infinite linear alternate;
+}
+
+.arrow_box:after, .arrow_box:before {
+    top: 100%;
+    left: 20%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+.arrow_box:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-top-color: #ffffff;
+    border-left-color: #ffffff;
+    border-width: 2px;
+    margin-left: -2px;
+}
+.arrow_box:before {
+    border-color: rgba(194, 225, 245, 0);
+    border-top-color: #ffffff;
+    border-left-color: #ffffff;
+    border-width: 8px;
+    margin-left: -8px;
+}
+
+@-webkit-keyframes cssAnimation {
+    from { -webkit-transform: translateY(0px); }
+    to { -webkit-transform: translateY(10px); }
+}
+@-moz-keyframes cssAnimation {
+    from { -moz-transform: translateY(0px); }
+    to { -moz-transform: translateY(10px); }
+}
+@-o-keyframes cssAnimation {
+    from { -o-transform: translateY(0px); }
+    to { -o-transform: translateY(10px); }
+}
 
 @media screen and (min-width: 768px){
     .landingpage {
