--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -190,3 +190,32 @@ body {
     position: relative;
     z-index: 1;
 }
+
+.arrowDown {
+    text-align: center;
+    position: absolute;
+    top: 85vh;
+    margin: 0px auto;
+    width: 100%;
+    -webkit-animation: upAndDown .5s infinite linear alternate;
+    -moz-animation: upAndDown .5s infinite linear alternate;
+    -o-animation: upAndDown .5s infinite linear alternate;
+}
+
+.arrowDown span {
+    font-size: 36px;
+    color: white;
+}
+
+@-webkit-keyframes upAndDown {
+    from { -webkit-transform: translateY(0px); }
+    to { -webkit-transform: translateY(10px); }
+}
+@-moz-keyframes upAndDown {
+    from { -moz-transform: translateY(0px); }
+    to { -moz-transform: translateY(10px); }
+}
+@-o-keyframes upAndDown {
+    from { -o-transform: translateY(0px); }
+    to { -o-transform: translateY(10px); }
+}
